3.0.1 fixed figure spacing first child

--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -136,6 +136,7 @@ ol,
 dl,
 blockquote,
 pre,
+figure,
 h1,
 .c-h1,
 h2,
